<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:background="@color/white"
                                       app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                       tools:context=".activity.EventDetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_12" />

        <LinearLayout
                android:id="@+id/tvViewPatrika"
                android:layout_marginEnd="@dimen/dimens_12"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp">
            <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            <TextView
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/white"
                    android:background="@drawable/background_patrika"
                    android:gravity="center"
                    android:text="@string/view_patrika"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimens_16"
                android:layout_marginRight="@dimen/dimens_16"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wedding"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvEventSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Save the date, join us for the wedding celebration of Pooja  and Chetan "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_8"
                    android:text="@string/lbl_family"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvFamily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Kasar Parivar, Nashik and Pawle Parivar, Satara "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_16"
                    android:text="@string/muhurt_time"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Friday, 25 May, 2018. Afternoon 12:35"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_16"
                    android:text="@string/place"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Indraprashta Lawns, Samangaon Road, Nashik Road, Nashik."
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

        </LinearLayout>

        <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="@dimen/dimens_8"
                app:liteMode="true"
                app:mapType="normal" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimens_16"
                android:layout_marginLeft="@dimen/dimens_16"
                android:layout_marginRight="@dimen/dimens_16"
                android:layout_marginTop="@dimen/dimens_20"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvRelInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relative_s_information"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvRelInfoDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudan tium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beata e vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia. "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

            <TextView
                    android:layout_marginTop="@dimen/dimens_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_information"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvMoreInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudan tium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beata e vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia. "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_16"
                    android:text="@string/contact_no"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:drawablePadding="@dimen/dimens_8"
                    android:drawableLeft="@drawable/ic_phoneno"
                    android:id="@+id/tvContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:autoLink="phone"
                    android:text="+91 9021179338, +91 9745621321"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_16"
                    android:text="@string/imp_note"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:text="No Gifts Please"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_16" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>


