<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:paddingLeft="@dimen/dimens_12"
              android:paddingRight="@dimen/dimens_8"
              android:paddingTop="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

        <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/imgCard"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="@dimen/dimens_4"
                app:srcCompat="@drawable/ic_gaav_logo_final_circle_pl_square"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimens_16"
                android:weightSum="4">

            <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3.1"
                    android:maxLines="1"
                    android:text="Agriculture"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:id="@+id/tvSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="NABARD’s New ‘Water Atlas’ to Help Farmers Get the Water They Need, Lower Wastage to Help Farmers Get the Water They Need, Lower Wastage "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_15" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="90dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_24"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimens_16">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="fill_vertical"
                    android:text="@string/lbl_news_status"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="fill_vertical"
                    android:paddingLeft="@dimen/dimens_8"
                    android:textColor="@color/kelly_green"
                    android:textSize="@dimen/text_13"
                    tools:text="Published" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_24"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimens_16">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="fill_vertical"
                    android:text="@string/lbl_news_date"
                    android:textSize="@dimen/text_13" />

            <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="fill_vertical"
                    android:paddingLeft="@dimen/dimens_8"
                    android:textColor="@color/dark_jungle_green"
                    android:textSize="@dimen/text_13"
                    tools:text="Wed, April 17, 2018" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:gravity="right|center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_40"
            android:layout_marginBottom="@dimen/dimens_4"
            android:orientation="horizontal">

        <Button
                android:visibility="visible"
                android:layout_marginRight="@dimen/dimens_4"
                android:layout_marginLeft="@dimen/dimens_12"
                android:layout_marginTop="2dp"
                android:id="@+id/btnDelete"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/button_gray_with_radious"
                android:text="@string/lbl_delete"
                android:textAllCaps="true"
                android:textColor="@color/manatee" />

        <Button
                android:layout_marginLeft="@dimen/dimens_12"
                android:layout_marginTop="2dp"
                android:id="@+id/btnReject"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/border_red_square"
                android:text="@string/lbl_reject"
                android:textAllCaps="true"
                android:textColor="@color/sinopia"/>

        <Button
                android:layout_marginLeft="@dimen/dimens_12"
                android:layout_marginTop="2dp"
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/button_green_radious"
                android:text="@string/lbl_accept"
                android:textAllCaps="true"
                android:textColor="@color/succes_green"/>

    </LinearLayout>


</LinearLayout>